--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,17 @@
 .App{
+  margin: auto;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   color: white;
-  position: fixed;
-  bottom: 0;
+  text-align: center;
+  position: absolute;
   top: 0;
-  right: 0;
+  bottom: 0;
   left: 0;
-  margin: 80px 0;
+  right: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-image: url("./resources/background.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
