--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -3,12 +3,12 @@
     display: flex;
     justify-content: space-evenly;
 }
-.count{
+.counter{
     width: 25%;
     font-family: 'Oswald', sans-serif;
     font-size: 52px;
 }
-.count p{
+.counter p{
     font-family: 'Baloo Chettan 2', cursive;
     font-size: 28px;
 }
@@ -16,10 +16,4 @@ h1{
     margin-top: 0;
     font-size: 48px;
     padding: 10px;
-}
-.news{
-    font-family: 'Caveat', cursive;
-    font-size: 24px;
-    margin: 0 auto;
-    width: 80%;
 }
